--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap');
 .App {
   text-align: center;
 }
@@ -60,7 +62,7 @@ padding: 0.1em 0.2rem !important ;
 }
 
 body {
-  background-color: #232323;
+  font-family: 'Glass Antiqua', cursive;
 }
 .selected{
   background-color: #212121;
@@ -447,15 +449,16 @@ flex-direction: column;
 -ms-flex-pack: center;
 justify-content: center;
 color: #fff;
+font-weight: bold;
 text-align: center;
 white-space: nowrap;
-background-color: #007bff;
+background-color: #13b9b5;
 transition: width .6s ease;
 height: 100%;
 }
 
 .bg-danger {
-background-color: #ff3547 !important;
+background-color: #ec4712 !important;
 height: 100%;
 }
 
@@ -516,6 +519,7 @@ img {
 max-width: 100%;
 height: 250px;
 display: block;
+margin: auto;
 }
 
 h3 {
