--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -1,42 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap');
 
+#swords {
+  height: 30px;
+}
+
+img {
+  max-width: 100%;
+  height: 250px;
+  display: block;
+}
+
+.image_player {
+  max-width: 100%;
+  height: 250px;
+  display: block;
+  margin: auto;
+}
 .row2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
+.card-title {
+  font-family: 'Glass Antiqua', cursive;
+  font-weight: bold;
+}
 .card {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.535);
 }
 
 .logo {
-  border: solid;
-  border-color: salmon;
+    display: flex;
+      align-items: flex-start;
 }
 
-.logo_img {
-border: solid;
-border:red;
+.logo_image {
+  display: flex;
+  align-items: flex-start;
 }
 
-.img-fluid {
-  height: 300px;
-}
 
 body {
   font-family: 'Glass Antiqua', cursive;
-  background-image: url(../../public/images/poire.jpg);
+  background-image: url(/images/poire.jpg);
   background-size:  cover;
-    background-repeat: no-repeat;
+  background-repeat: no-repeat;
 }
 
 .App {
   text-align: center;
-  
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -545,12 +562,6 @@ width: 100%;
 height: 100%;
 }
 
-img {
-max-width: 100%;
-height: 250px;
-display: block;
-margin: auto;
-}
 
 h3 {
 text-align: center;
