--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -1,14 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap');
+img {
+  max-width: 100%;
+  height: 250px;
+  display: block;
+}
+
+#barMonster {
+  background-color: #0044ff;
+}
+
+/* .card-body {
+  background-image: url("/public/images/Yugo-card.gif");
+} */
 
 #swords {
   height: 30px;
 }
 
-img {
-  max-width: 100%;
-  height: 250px;
-  display: block;
+#skull {
+  height: 30px;
+}
+
+.gris {
+  filter: grayscale(100%);
 }
 
 .image_player {
@@ -16,6 +31,8 @@ img {
   height: 250px;
   display: block;
   margin: auto;
+  padding-left: 40px;
+    padding-right: 40px;
 }
 .row2 {
   display: flex;
@@ -33,13 +50,14 @@ img {
 }
 
 .logo {
-    display: flex;
-      align-items: flex-start;
+  display: flex;
+    align-items: flex-start;
 }
 
 .logo_image {
   display: flex;
   align-items: flex-start;
+  margin-bottom: -80px;
 }
 
 
