--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -1,18 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap');
+
 img {
   max-width: 100%;
   height: 250px;
   display: block;
 }
 
-#barMonster {
-  background-color: #0044ff;
+.card-body {
+  border: solid;
+  border-color: blue;
 }
 
-/* .card-body {
-  background-image: url("/public/images/Yugo-card.gif");
-} */
+.corps {
+  border: solid;
+  border-color: red;
+  display: block;
+  align-content: flex-end;
+}
 
 #swords {
   height: 30px;
@@ -28,7 +33,7 @@ img {
 
 .image_player {
   max-width: 100%;
-  height: 250px;
+  height: 100%;
   display: block;
   margin: auto;
   padding-left: 40px;
@@ -44,11 +49,17 @@ img {
   font-family: 'Glass Antiqua', cursive;
   font-weight: bold;
 }
+
 .card {
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.535);
+  width: 150%;
+    height: 300%;
+    background-color: transparent;
+    border: none;
 }
 
+.cardMonster {
+  height: 400px;
+}
 .logo {
   display: flex;
     align-items: flex-start;
