--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -7,18 +7,69 @@ img {
   display: block;
 }
 
+body {
+  font-family: 'Glass Antiqua', cursive;
+  background-image: url("/public/images/background/pre_nuit.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card {
+  border: none;
+  width: 280px;
+  margin: 20px auto;
+  background-color: transparent;
+}
 .card-body {
-  border: solid;
-  border-color: blue;
+  display: flex;
+    flex-direction: column;
+    height: 390px;
+    justify-content: flex-end
+  }
+  
+  .card-title {
+    font-family: 'Glass Antiqua', cursive;
+    font-weight: bold;
+  }
+  
+  .bar_boutons {
+    margin-bottom: 11px;
+    width: 100%;
+    height: 25%;
+  }
+  
+  .progress-bar {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    transition: width .6s ease;
+    height: 100%;
+  }
+  
+  .progress_bar_pv {
+    margin-bottom: 31px;
+    margin-left: 38px;
+    width: 83%;
+    background-color: #fcfcfc;
+    height: 14px;
+    margin-right: 40px;
 }
 
-.corps {
-  border: solid;
-  border-color: red;
-  display: block;
-  align-content: flex-end;
+.progress_bar_mana {
+  margin-bottom: 1px;
+  width: 80%;
+  margin-left: 30px;
+  background-color: #25a289;
 }
 
+/*    BOUTONS    */
 #swords {
   height: 30px;
 }
@@ -26,40 +77,27 @@ img {
 #skull {
   height: 30px;
 }
+/*    FIN BOUTONS */
 
+/*    CARD MONSTRE     */
+.cardMonster {
+  height: 400px;
+}
+
+/*    FIN CARD MONSTRE */
 .gris {
   filter: grayscale(100%);
 }
 
-.image_player {
-  max-width: 100%;
-  height: 100%;
-  display: block;
-  margin: auto;
-  padding-left: 40px;
-    padding-right: 40px;
-}
+
 .row2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
-.card-title {
-  font-family: 'Glass Antiqua', cursive;
-  font-weight: bold;
-}
 
-.card {
-  width: 150%;
-    height: 300%;
-    background-color: transparent;
-    border: none;
-}
-
-.cardMonster {
-  height: 400px;
-}
+/*    IMAGES GLOBALES */
 .logo {
   display: flex;
     align-items: flex-start;
@@ -70,14 +108,9 @@ img {
   align-items: flex-start;
   margin-bottom: -80px;
 }
+/*    FIN IMAGES GLOBALES */
 
 
-body {
-  font-family: 'Glass Antiqua', cursive;
-  background-image: url("/public/images/poire.jpg");
-  background-size:  cover;
-  background-repeat: no-repeat;
-}
 
 /* Définition de l'animation shake avec des transformations pour créer un effet de tremblement */
 @keyframes shake {
@@ -209,7 +242,6 @@ padding: 0.1em 0.2rem !important ;
 position: absolute;
 font-size: 30;
 }
-
 
 
 /*
@@ -569,71 +601,6 @@ animation: none;
 }
 }
 /*#### End Bouton COMBO ####*/
-
-.bar-taille {
-width: 65%;
-margin: auto;
-display: block;
-}
-
-.progress-bar {
-display: -ms-flexbox;
-display: flex;
--ms-flex-direction: column;
-flex-direction: column;
--ms-flex-pack: center;
-justify-content: center;
-color: #fff;
-font-weight: bold;
-text-align: center;
-white-space: nowrap;
-background-color: #13b9b5;
-transition: width .6s ease;
-height: 100%;
-}
-
-.bg-danger {
-background-color: #ec4712 !important;
-height: 100%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 #testCarouselle {
 height: 100vh;
