--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -42,48 +42,89 @@ display: flex;
 }
   
 .progress-bar {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-pack: center;
-  justify-content: center;
+display: flex;
+flex-direction: column;
+justify-content: center;
   color: #fff;
   font-weight: bold;
   text-align: center;
   white-space: nowrap;
   transition: width .6s ease;
   height: 100%;
-}
-  
-.progress_bar_pv {
-  margin-bottom: 31px;
-  margin-left: 38px;
-  width: 83%;
-  background-color: #fcfcfc;
-  height: 14px;
-  margin-right: 40px;
+position: relative;
+  overflow: hidden;
+  background: linear-gradient(145deg, #25a289 0%, #3cb0a8 50%, #1e7267 100%);
 }
 
 .progress_bar_pv_monster {
   margin-bottom: 60px;
   margin-left: 38px;
   width: 83%;
-  background-color: transparent;
+  background-color: white;
   height: 14px;
   margin-right: 40px;
+}
+  
+.progress_bar_pv {
+  margin-bottom: 31px;
+  margin-left: 38px;
+  width: 83%;
+height: 14px;
+  margin-right: 40px;
+background: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .progress_bar_mana {
   margin-bottom: 1px;
   width: 80%;
   margin-left: 30px;
-  background-color: transparent;
+height: 14px;
+  background: transparent !important;
 }
 
+.glossy-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
+  animation: shine 5s infinite;
+  opacity: 0;
+  /* Commencez par rendre l'effet invisible */
+}
+
+@keyframes shine {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  50% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(200%);
+  }
+}
+
+@keyframes shine {
+  0% {
+    left: -100%;
+  }
+
+  50% {
+    left: 100%;
+  }
+        100% {
+          left: 200%;
+        }
+        }
 /*    BOUTONS    */
 #icon_button {
   height: 40px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 /*    FIN BOUTONS */
