--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -267,41 +267,72 @@ height: 14px;
 }
 /*   FIN PROGRESS BAR    */
 
+/* ECRAN VICTOIRE/DEFAITE */
+
+
+@keyframes fadeInDown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 /*   ECRAN VICTOIRE    */
-.ecran_victoire {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  z-index: 1000;
-    font-family: 'Glass Antiqua', cursive;
-}
-/*   FIN ECRAN VICTOIRE    */
+/* Game.css */
 
-/*   ECRAN DEFAITE    */
-.ecran_defaite {
+/* Styles globaux pour les titres */
+.ecran_victoire h1, .ecran_defaite h1 {
+  font-family: 'Glass Antica';
+  font-size: 3em;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transform: translateY(-20px);
+  animation: fadeInDown 5s forwards;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+@keyframes fadeInDown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Styles pour le conteneur des vidéos */
+.ecran_victoire, .ecran_defaite {
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
-  font-family: 'Glass Antiqua', cursive;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .background-video {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   z-index: -1;
-  transform: translate(-50%, -50%);
 }
+
+/* Styles pour le bouton */
+.btn {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 
 .ecran_victoire .content {
   position: relative;
@@ -310,6 +341,7 @@ height: 14px;
   text-align: center;
   padding-top: 20vh;
 }
+
 
 /*    FIN ECRAN DEFAITE    */
 
